# Maximum-Independent-Set

./: Makefile
src/: Alg.cpp  CMakeLists.txt  Graph.cpp  Graph.hpp  Jlwrapper.cpp  Jlwrapper.h  Mis.cpp  Reductions.cpp  Reductions.hpp
